<resources>
    <string name="app_name">MySqlClient</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="table">数据表</string>
    <string name="tablename">表名</string>
    <string name="view">视图</string>
    <string name="ssh">ssh连接</string>
    <string name="functions">函数</string>
    <string name="trigger">触发器</string>
    <string name="setting">设置</string>
    <string name="home">主页</string>
    <string name="nick">昵称</string>
    <string name="confirm">确定</string>
    <string name="host">主机</string>
    <string name="port">端口</string>
    <string name="database">数据库</string>
    <string name="user">用户名</string>
    <string name="password">密码</string>
    <string name="title_activity_table">TableActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="consule">控制台</string>
    <string name="submit">提交</string>
    <string name="file">字段名</string>
    <string name="type">类型</string>
    <string name="default_value">缺省值</string>
    <string name="primary_key">主键</string>
    <string name="auto_increment">自增</string>
    <string name="not_null">不可为空</string>
    <string name="event">事件</string>
    <string name="time">时间</string>
    <string name="statement">事务</string>
    <string name="functionInfo">函数内容</string>
    <string name="viewInfo">视图详情</string>
    <string name="connection_fail">连接数据库失败</string>
    <string name="connection_success">连接数据库成功</string>
    <string name="connection_first">你还未连接数据库，请先连接数据库</string>
    <string name="create_trigger_fails">触发器创建失败</string>
    <string name="create_Function_fails">函数创建失败</string>
    <string name="create_View_fails">视图创建失败</string>
    <string name="filter">筛选</string>
    <string name="condition">条件</string>
    <string name="ssh_connection_success">ssh连接成功</string>
    <string name="ssh_connection_fauli">ssh连接失败</string>
    <string name="error_sql">数据库操作错误</string>
</resources>
