<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:checked="true"
            android:icon="@drawable/ic_subtitles_black_18dp"
            android:title="@string/home" />
        <item
            android:id="@+id/navigation_table"
            android:icon="@drawable/ic_subtitles_black_18dp"
            android:title="@string/table" />
        <item
            android:id="@+id/navigation_consule"
            android:icon="@drawable/ic_business_black_18dp"
            android:title="@string/consule" />
        <item
            android:id="@+id/navigation_ssh"
            android:icon="@drawable/ic_business_black_18dp"
            android:title="@string/ssh"/>
            <!--android:visible="false" />-->
        <item
            android:id="@+id/navigation_functions"
            android:icon="@drawable/ic_view_list_black_18dp"
            android:title="@string/functions" />
        <item
            android:id="@+id/navigation_setting"
            android:icon="@drawable/ic_view_list_black_18dp"
            android:title="@string/setting" />
    </group>
</menu>