<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_tablePropertyDialog_file"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/file" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_tablePropertyDialog_type"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/type" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_tablePropertyDialog_default"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/default_value" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/check_tablePropertyDialog_primaryKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/primary_key" />

    <CheckBox
        android:id="@+id/check_tablePropertyDialog_autoInc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_increment" />

    <CheckBox
        android:id="@+id/check_tablePropertyDialog_notNull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_null" />

    <Button
        android:id="@+id/btn_tablePropertyDialog_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />
</LinearLayout>