<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">


    <android.support.design.widget.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_sshDialog_nick"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:hint="@string/nick" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_sshDialog_host"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:hint="@string/host" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_sshDialog_port"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:hint="@string/port"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_sshDialog_name"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:hint="@string/user" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_sshDialog_password"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_sshDialog_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />
</LinearLayout>