<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="10dp"
    app:cardBackgroundColor="@color/md_green_200"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_name_functionAdapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_vertical"
            android:layout_margin="20dp"
            android:text="@string/functions" />

        <TextView
            android:id="@+id/tv_namevalue_functionAdapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_toRightOf="@id/tv_name_functionAdapter" />

        <TextView
            android:id="@+id/tv_event_functionAdapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name_functionAdapter"
            android:layout_margin="20dp"
            android:text="@string/event" />

        <TextView
            android:id="@+id/tv_eventvalue_functionAdapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_namevalue_functionAdapter"
            android:layout_margin="20dp"
            android:layout_toRightOf="@id/tv_event_functionAdapter" />

        <TextView
            android:id="@+id/tv_table_functionAdapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_event_functionAdapter"
            android:layout_margin="20dp"
            android:text="@string/table" />

        <TextView
            android:id="@+id/tv_tablevalue_functionAdapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_eventvalue_functionAdapter"
            android:layout_margin="20dp"
            android:layout_toRightOf="@id/tv_table_functionAdapter" />

        <TextView
            android:id="@+id/tv_time_functionAdapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_table_functionAdapter"
            android:layout_margin="20dp"
            android:text="@string/time" />

        <TextView
            android:id="@+id/tv_timevalue_functionAdapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_tablevalue_functionAdapter"
            android:layout_margin="20dp"
            android:layout_toRightOf="@id/tv_time_functionAdapter" />
    </RelativeLayout>

</android.support.v7.widget.CardView>